2009-10-21  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid version numbers to 0.9.11.

2009-10-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12280: Error Message while creating empty Folders (thanks to Daniel Schmitzer)
	* Fixed bug #11643: typoLink() sometimes wrongly drops url if link contains a section (thanks to Vladimir Podkovanov)
	* Added feature #12189: Add API functions for cleaning and flushing output buffers

2009-10-21  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated ext_emconf.php files in system extensions
	* Follow-up to bugfix #539: Tables that cannot be localized at all produce a SQL error on deleting records
	* Cleanup: Fixed non-static function declarations in t3lib_BEfunc
	* Follow-up to bugfix #2314: Using the clipboard in the list view shows SQL errors for tables without versioning support
	* Cleanup: Updated NEWS.txt

2009-10-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12299: #12112: Enable resizable textareas by default (thanks to Steffen Gebert)
	* Fixed bug #12299: EM tries to read from tables of not installed extensions
	* Fixed bug #12075: Add COMPARE Link to update Wizard
	* Fixed bug #12168: Empty line in general header comment
	* Fixed bug #12175: User Setup don't check file time of ENABLE_INSTALL_TOOL
	* Fixed bug #12237: Use flash-messages in user-settings (thanks to Georg Ringer)
	* Follow-up to bug #12272: reverted renaming of step
	* Fixed bug #12272: Steps disregarded in t3lib_lock (thanks to Dan Osipov)

2009-10-21  Christian Kuhn  <lolli@schwarzbu.ch>

	* Cleanup #11813: Refactoring t3lib_db to match CGL (thanks to Felix Oertel)

2009-10-20  Francois Suter  <francois@typo3.org>

	* Added feature #12187: Added more usage of flashmessages to EM (thanks to Steffen Gebert)
	* Fixed bug #12177: Scheduler: Corrected situation where a new single task with a creation date in the past would never run (thanks to Ingmar Schlecht)

2009-10-20  Steffen Kamper  <info@sk-typo3.de>
