@@ -1,3 +1,7 @@
+2009-10-22  Ernesto Baschny <ernst@cron-it.de>
+
+	* Fixed bug #11586: Potential SQL injection in frontend editing (thanks to Oliver Klee)
+
 2009-10-21  Sebastian Kurfuerst  <sebastian@typo3.org>
 
 	* Raised Extbase and Fluid version numbers to 0.9.11.
